# Build-agents-with-LangGraph

./: 0_build_simple_single_agent_langgraph.ipynb  1_add_tools_to_simple_agent.ipynb  2_advance-langgraph-multi-agent-setup.ipynb  3_build_and_deploy_agent.py  3_intro_to_MCP.md  Dockerfile  README.md  build_and_push.sh  chatbot.py  deploy.py  main.py  pyproject.toml  requirements.txt
0_build_simple_agent_langGraph/: 0_build_simple_agent_langgraph.md
1_add_tools_to_agent/: 1_add_tools_to_simple_agent.ipynb  1_add_tools_to_simple_agent.md
2_multi_agent_langGraph/: 2_advance-langgraph-multi-agent-setup.ipynb  2_multi_agent_langgraph.md
3_deploy_langGraph_agent/: deploy.md
data/: attractions.json  travel_bookings.db  weather.json
deploy_langGraph_agent/: server.py
